[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catch-input = "1.1.2"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1", features = ["full"] }
num_cpus = "1.15.0"
