[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catch-input = "1.1.2"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1", features = ["full"] }
num_cpus = "1.15.0"
tokio-tungstenite = "0.18.0"
log = "0.4.17"
futures-util = "0.3.26"
tungstenite = "0.18.0"
env_logger = "0.10.0"